--- a/assets/styles/product/swatches.scss
+++ b/assets/styles/product/swatches.scss
@@ -39,13 +39,13 @@ $swatch-label-size: 34px;
     min-width: $swatch-element-size;
     height: $swatch-element-size;
     margin: 0;
-    font-size: 13px;
+    font-size: $btn-primary-font-size;
     text-align: center;
     line-height: $swatch-element-size;
     white-space: nowrap;
-    text-transform: uppercase;
     cursor: pointer;
     padding: 0 10px;
+    font-weight: 600;
   }
 
   .swatch .color label {
@@ -86,8 +86,10 @@ $swatch-label-size: 34px;
   }
 
   .swatch_options input:checked + .swatch-element {
-    border-color: black ;
-    box-shadow: 0px 0px 0px 2px rgba(255,255,255,1);
+    background-color: $color-contrast-higher;
+    label {
+      color: hsl(50, 13%, 91%) !important;
+    } 
   }
 
   .swatch .swatch-element {
@@ -98,6 +100,8 @@ $swatch-label-size: 34px;
     margin: 0px 8px 8px 0;
     position: relative;
     outline: none;
+    justify-content: center;
+    display: flex;
   }
 
   .crossed-out {
@@ -138,7 +142,7 @@ $swatch-label-size: 34px;
     display: block;
     position: absolute;
     width: 120px;
-    font-size: 13px;
+  
     left: {{ 30 | divided_by: 2 | minus: 50 }}px;
     margin-bottom: 15px;
     opacity: 0;
