--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -24,6 +24,7 @@
   {{ 'fancybox.css' | asset_url | stylesheet_tag }}
   <!-- Stylesheets for Flex "2.0.6" -->
   {{ 'styles.scss.css' | asset_url | stylesheet_tag }}
+  <link rel="stylesheet" href="{{ 'custom.css' | asset_url }}">
   <link rel="stylesheet" href="https://use.typekit.net/pkr3oer.css">
 
   {% if settings.show_multiple_currencies or shop.enabled_currencies.size > 1 %}
