--- a/sections/product-image-scroll__main.liquid
+++ b/sections/product-image-scroll__main.liquid
@@ -141,7 +141,7 @@
 
               {% comment %} Current price {% endcomment %}
               <span class="{% if variant.compare_at_price > variant.price %}sale{% endif %}">
-                <span class="current_price {% if product.available == false %}hidden{% endif %}">
+                <h4 class="current_price {% if product.available == false %}hidden{% endif %}">
                   {% if variant.price > 0 %}
                     <span class="money">
                       {% render 'price-element', price: variant.price %}
@@ -149,7 +149,7 @@
                   {% else %}
                     {{ settings.free_price_text }}
                   {% endif %}
-                </span>
+                </h4>
               </span>
 
               {% comment %} Compare at (original) price {% endcomment %}
