--- a/snippets/product__form.liquid
+++ b/snippets/product__form.liquid
@@ -59,16 +59,12 @@
       <input type="hidden" name="id" value="{{ variant.id }}" />
     {% endif %}
 
-    {% if settings.display_product_quantity %}
-    <div class="purchase-details__quantity product-quantity-box quantity-box--{{ settings.qty_box_style }}">
-      {% render 'quantity-box' %}
-    </div>
-    {% endif %}
+
   </div>
 
   {% if product.variants.size > 1 %}
     {% if settings.product_form_style == "swatches" and product.variants.size > 1 or settings.product_form_style == "swatches" and product.options[0] != "Title" %}
-      <div class="swatch_options collection_swatches">
+      <div class="swatch_options collection_swatches margin-top-md">
         {% for option in product.options %}
           {% render 'product__swatch',
                   product: product,
@@ -78,6 +74,8 @@
       </div>
     {% endif %}
   {% endif %}
+
+
 
   {% if product.available %}
     {% if settings.display_inventory_left %}
@@ -97,7 +95,14 @@
       </p>
     {% endif %}
 
-    <div class="purchase-details {% if settings.display_product_quantity %}has-quantity-box{% endif %}">
+<div class="flex">
+    {% if settings.display_product_quantity %}
+    <div class="purchase-details__quantity product-quantity-box quantity-box--{{ settings.qty_box_style }}">
+      {% render 'quantity-box' %}
+    </div>
+    {% endif %}
+
+    <div class="purchase-details flex-grow {% if settings.display_product_quantity %}has-quantity-box{% endif %}">
 
       {% comment %} Error message for add to cart action {% endcomment %}
       <div class="cart-warning"></div>
@@ -132,6 +137,8 @@
         {% endif %}
       </div>
     </div>
+  </div>
+
   {% endif %}
 {% endform %}
 </div>
