--- a/assets/styles/product/product-thumbnail.scss
+++ b/assets/styles/product/product-thumbnail.scss
@@ -20,7 +20,7 @@ $product-hover-bg: {{ settings.product_hover_bg_color | color_modify: 'alpha', 0
 }
 
 // Hover effects
-.product__thumbnail, .list-collection__thumbnail {
+.product__thumbnail, .list-collection__thumbnail,  .yotpo-promoted-product {
   @include filter-bg();
   @include border;
   &:hover {
