--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -30,7 +30,7 @@
         //   font-weight: 300;
         //   font-style: normal; }
 
-          h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a, #nav li a, div.title a, .headline, .subtitle, a, span, p, body, .button, select { font-family: 'roc-grotesk' !important; }
+          h1, h1 a, h2, h2 a, h3, h3 a, h4, h4 a, h5, h5 a, h6, h6 a, #nav li a, div.title a, .headline, .subtitle, a, span, p, body, .button, select, .yotpo-product-name { font-family: 'roc-grotesk' !important; }
 
 body {
   font-family: {{ settings.regular__font.family }}, {{ settings.regular__font.fallback_families }};
