--- a/sections/index__logo-list.liquid
+++ b/sections/index__logo-list.liquid
@@ -9,7 +9,7 @@
 {% schema %}
   {
     "name": "Logo list",
-    "class": "logo-list",
+    "class": "logo-list bg-primary-lighter padding-y-xl",
     "max_blocks": 20,
     "settings": [
       {
