--- a/sections/index__social-gallery.liquid
+++ b/sections/index__social-gallery.liquid
@@ -43,7 +43,7 @@
           
           <div class="b10 z-index-3">
             <span class="text-base gallery-caption">
-              <p itemprop="name" class="block color-white text-bold text-md@lg link-fx-5"><span class="color-gradient-accent">Shop&nbsp;{{ product.title }} ➞</span></p>
+              <p itemprop="name" class="block color-white text-bold  link-fx-5"><span class="color-gradient-accent">Shop&nbsp;{{ product.title }} ➞</span></p>
             </span>
           </div>
 
@@ -51,7 +51,7 @@
 
         <div class="padding-x-md b10 z-index-3 hide-content">
           <span class="text-base gallery-caption">
-            <p itemprop="name" class="block color-white text-bold text-md@lg link-fx-5" style="color: white;">{{ block.settings.title | capitalize }}&nbsp;loves the&nbsp;<span class="color-gradient-accent">{{ product.title }}</span></p>
+            <p itemprop="name" class="block color-white text-bold  link-fx-5" style="color: white;">{{ block.settings.title | capitalize }}&nbsp;loves the&nbsp;<span class="color-gradient-accent">{{ product.title }}</span></p>
           </span>
         </div>
 
