--- a/snippets/product__form.liquid
+++ b/snippets/product__form.liquid
@@ -95,6 +95,8 @@
       </p>
     {% endif %}
 
+    <div class="rc-widget-injection-parent"></div>
+
 <div class="flex">
     {% if settings.display_product_quantity %}
     <div class="purchase-details__quantity product-quantity-box quantity-box--{{ settings.qty_box_style }}">
