--- a/sections/product-image-scroll__main.liquid
+++ b/sections/product-image-scroll__main.liquid
@@ -116,7 +116,12 @@
           {% endif %}
 
           {% comment %} Name {% endcomment %}
-          <h1 class="product_name title">{{ product.title }}</h1>
+          <span class="padding-xs bg-primary-light inline-block margin-bottom-md" style="background-color: #d0b886 !important;">
+            <p class="text-xs" style="font-weight: 600;">{{ product.type }}</p>
+          </span>
+          <h1 class="product_name">{{ product.title }}</h1>
+
+          
 
           {% for tag in product.tags %}
             {% if tag contains 'meta-size-chart-' %}
@@ -141,7 +146,7 @@
 
               {% comment %} Current price {% endcomment %}
               <span class="{% if variant.compare_at_price > variant.price %}sale{% endif %}">
-                <h4 class="current_price {% if product.available == false %}hidden{% endif %}">
+                <h2 class="current_price {% if product.available == false %}hidden{% endif %}">
                   {% if variant.price > 0 %}
                     <span class="money">
                       {% render 'price-element', price: variant.price %}
@@ -149,7 +154,7 @@
                   {% else %}
                     {{ settings.free_price_text }}
                   {% endif %}
-                </h4>
+                </h2>
               </span>
 
               {% comment %} Compare at (original) price {% endcomment %}
@@ -283,7 +288,7 @@
           {% comment %} Product reviews {% endcomment %}
           {% include 'include-reviews', type: 'block' %}
           <section class="section is-width-standard padding-bottom-xl">
-            <div class="container">
+            <div class="container margin-y-xl">
               <!-- YOTPO Reviews / START -->
               <div class="yotpo yotpo-main-widget" data-product-id="{{ product.id }}" data-name="{{ product.title | escape }}" data-url="{{ shop.url }}{{ product.url }}" data-image-url="{{ product.featured_image | product_img_url: 'large' |replace: '?', '%3F' | replace: '&','%26'}}" data-price="{{ variant.price | money_without_currency }}"
               data-currency=“{{ shop.currency }}” data-description=“{{ product.description | escape }}“>
@@ -308,7 +313,13 @@
             <script type="text/javascript">
               $(document).ready(function() {
                 $('.yotpo-default-button').addClass('button button--primary');
-                console.log("✅ Added style to Yotpo buttons")
+                console.log('✅ Added style to Yotpo buttons')
+            
+                $(".yotpo-main-title").text(function () {
+                  return $(this).text().replace('Other top rated products', 'Even more to love'); 
+                });​​​​​
+
+                $('.promoted-products-box').after( '<h1>Worth barking about</h1>');
               });
             </script>
           </section>
