--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -302,6 +302,8 @@
 
 <!-- END / Third-party scripts / Added by Latimer Design -->
 
+
+{% include 'subscription-theme-footer' %}
 </body>
 </html>
 {% endcapture %}
