--- a/sections/cart__main.liquid
+++ b/sections/cart__main.liquid
@@ -299,9 +299,11 @@
                     </div>
                     <div class="is-flex is-align-center is-justify-end">
                       {% if content_for_additional_checkout_buttons %}
+                      <span class="additional-checkout-buttons">
                         <div class="additional-checkout-buttons">
                           {{ content_for_additional_checkout_buttons }}
                         </div>
+                      </span>
                       {% endif %}
                     </div>
                     <div class="is-flex is-align-center is-justify-end">
