--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -1,6 +1,10 @@
 {% comment %}
   The contents of the cart.liquid template can be found in /sections/cart-template.liquid
 {% endcomment %}
+<!-- Begin Recharge code -->
+{% include 'subscription-cart-footer' %}
+<!-- End Recharge code -->
+
 <div id="template-{{ template | replace: '.', '-' | handle }}" class="shopify-section cart-page" data-check-for-order="true">
   {% section 'cart__banner' %}
   {% section 'cart__main' %}
