--- a/snippets/subscription-product.liquid
+++ b/snippets/subscription-product.liquid
@@ -164,7 +164,7 @@
 		</select>
 		<div id="rc_radio_options" role="radiogroup" aria-labelledby="Purchase options">
 			{% unless subscription_only %}
-				<div class="rc_block rc_block__type rc_block__type__onetime {% unless select_subscription_first %}rc_block__type--active{% endunless %}">
+				<div class="rc_block rc_block__type rc_block__type__onetime  padding-left-md {% unless select_subscription_first %}rc_block__type--active{% endunless %}">
 					<input type="radio" id="rc_purchase_type_onetime" name="purchase_type" value="onetime" {% unless select_subscription_first %}checked{% endunless %} class="rc_radio rc_radio__onetime">
 					<label for="rc_purchase_type_onetime" class="rc_label rc_label__onetime">
 						{{ label_onetime }}{% if discount_percentage > 0 %}:{% endif %}
