--- a/snippets/subscription-product.liquid
+++ b/snippets/subscription-product.liquid
@@ -189,7 +189,7 @@
             </label>
           
 
-          <p class="text-xs font-normal" style="margin-top: -5px;">Save 40% now & 5% on repeat orders; pause, skip, cancel anytime</p>
+          <p class="text-xs font-normal" style="margin-top: -5px;">Save {{ discount_percentage }}% now & on repeat orders; pause, skip, cancel anytime</p>
 
 				{% endunless %}
 				<div id="rc_autodeliver_options" class="rc_block rc_block__type__options margin-bottom-sm">
